Added vercel.json to fix 404 issue

--- a/vercel.json
+++ b/vercel.json
@@ -5,3 +5,8 @@
   "framework": "html",
   "outputDirectory": "."
 }
+{
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
+}
